# KevinKowalski

./: .gitignore  README.md  fetchagentSETUP.md  graph.html  mcpserverSETUP.md  pyproject.toml
mcp/: README.md  agentverse_agent.py  app.py  contract.py  fake_analyzer.py  formatters.py  index.html  mcp_server.py  real_analyzer.py  requirements.txt
mcp/tests/: conftest.py  test_contract.py  test_fake_analyzer_only.py  test_formatters.py  test_server.py
metrics/: CONTRACT.md  __init__.py  call_graph_cha.py  function_dependency_graph.py  graph.py  graph_ids.py  metrics.py
visualization/: generate_graph.py  render.py  utils.py
