[project]
name = "kevinkowalski"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.2.4",
    "lizard>=1.17.10",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "openai>=2.32.0",
    "pydot>=4.0.1",
    "pyqt6>=6.11.0",
    "pyvis>=0.3.2",
    "radon>=6.0.1",
    "uagents>=0.24.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
